2002-12-18  Andras Varga 

	* opp_stacktool.cmd added: it displays maximum reserved stack size
	for a program. This is the value which the sum of all coroutine
	stacks cannot exceed; also the upper bound of the total-stack-kb
	ini file setting.

2002-12-08  Andras Varga

	* opp_makemake, opp_nmakemake: handling of .ned files that use the 
	'experimental message subclassing' feature has changed. These files 
	should have .msg suffix, and they will be compiled by opp_msgc into 
	_m.h and _m.cc files. The '//--subclassing--' line is no longer needed.

2002-12-06  Andras Varga

        * added opp_neddocall: it documents all ned files in the current 
        directory and subdirectories.

        * opp_makemake_vc.pl renamed to opp_nmakemake

	* use .cmd files with NT command line extensions (%~ notation)
	to run opp_test, opp_makedep, opp_nmakemake and splitvec from Windows 
	command prompt

	* removed 'require Cwd' from perl scripts: we don't want to use any
	Perl modules, to avoid having to bundle a full Perl distribution into
	the Windows installer

2002-11-14  Andras Varga

	* opp_test: changes for Windows

	* opp_makemake_vc.pl: added makefile creator for MSVC. 100% Perl,
	no other Unix tool needed. The created Makefile.vc includes 
	configuser.vc for all compiler, linker, etc settings.

2002-10-30  Andras Varga

	* tcl2c.c: commented out old code for Borland C++, it was in the way
	when compiling with MinGW. BC is not supported anyway.

2002-10-19  Andras Varga

	* opp_test: added %global option; it can be used with %activity 
	and its body will be placed into the C++ source at global scope,
	so it's a good place for helper functions, etc.

2002-06-12  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* opp_makemake.in (htmldocs): Target htmldoc renamed to
	htmldocs. Now, creates directory htmldoc instead of html
	(clean): remove automatically generated documentation
	(htmldocs): use | instead of / as sed separator where file pathes
	can occur
